# agentic-langgraph-mcp

./: main.py  pyproject.toml  requirements.txt
1-Basic_Chatbot/: 1-basic_chatbot.ipynb  1.1-chatbot_with_tool.ipynb  1.2-react_agent_architecture.ipynb  1.3-memory_in_agentic_graph.ipynb  1.4-streaming_in_langgraph.ipynb  1.5-human_in_loop.ipynb
3-Multi_Ai_Agent/: 3.1-simple-multi-ai-agent.ipynb  supervisor-multi-ai-agent.ipynb
