[project]
name = "agentic-langgraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "langsmith>=0.7.34",
    "python-dotenv>=1.2.2",
]
